fix: fixed the error responses in swagger
